src/lang/DroolsRuleParser.js
// Generated from DroolsRule.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import DroolsRuleListener from './DroolsRuleListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class DroolsRuleParser extends antlr4.Parser {

    static grammarFileName = "DroolsRule.g4";
    static literalNames = [ null, "'declare'", "'dialect'", "'end'", "'extends'", 
                            "'global'", "'import'", "'package'", "'rule'", 
                            "'then'", "'when'", "'salience'", null, null, 
                            "';'", "':'" ];
    static symbolicNames = [ null, "DECLARE", "DIALECT", "END", "EXTENDS", 
                             "GLOBAL", "IMPORT", "PACKAGE", "RULE", "THEN", 
                             "WHEN", "SALIENCE", "PRIMITIVE", "KEYWORD", 
                             "SEMICOLON", "COLON", "SEPARATOR", "OPERATOR", 
                             "ID", "META", "BINDING", "FQN", "INT", "FLOAT", 
                             "SINGLELINE_COMMENT", "MULTILINE_COMMENT", 
                             "WS", "STRING", "CHAR" ];
    static ruleNames = [ "program", "declaration", "packageDeclaration", 
                         "dialectDeclaration", "importDeclaration", "globalDeclaration", 
                         "typeDeclaration", "memberDeclaration", "ruleDeclaration", 
                         "ruleLHS", "ruleRHS" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = DroolsRuleParser.ruleNames;
        this.literalNames = DroolsRuleParser.literalNames;
        this.symbolicNames = DroolsRuleParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, DroolsRuleParser.RULE_program);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 25;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 22;
	                this.declaration(); 
	            }
	            this.state = 27;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	        }

	        this.state = 31;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===DroolsRuleParser.WS) {
	            this.state = 28;
	            this.match(DroolsRuleParser.WS);
	            this.state = 33;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaration() {
	    let localctx = new DeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, DroolsRuleParser.RULE_declaration);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 37;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===DroolsRuleParser.WS) {
	            this.state = 34;
	            this.match(DroolsRuleParser.WS);
	            this.state = 39;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 46;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case DroolsRuleParser.PACKAGE:
	            this.state = 40;
	            this.packageDeclaration();
	            break;
	        case DroolsRuleParser.IMPORT:
	            this.state = 41;
	            this.importDeclaration();
	            break;
	        case DroolsRuleParser.GLOBAL:
	            this.state = 42;
	            this.globalDeclaration();
	            break;
	        case DroolsRuleParser.DIALECT:
	            this.state = 43;
	            this.dialectDeclaration();
	            break;
	        case DroolsRuleParser.DECLARE:
	            this.state = 44;
	            this.typeDeclaration();
	            break;
	        case DroolsRuleParser.RULE:
	            this.state = 45;
	            this.ruleDeclaration();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 51;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 48;
	                this.match(DroolsRuleParser.WS); 
	            }
	            this.state = 53;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	        }

	        this.state = 55;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===DroolsRuleParser.SEMICOLON) {
	            this.state = 54;
	            this.match(DroolsRuleParser.SEMICOLON);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	packageDeclaration() {
	    let localctx = new PackageDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, DroolsRuleParser.RULE_packageDeclaration);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this.match(DroolsRuleParser.PACKAGE);
	        this.state = 59; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 58;
	            this.match(DroolsRuleParser.WS);
	            this.state = 61; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DroolsRuleParser.WS);
	        this.state = 63;
	        this.match(DroolsRuleParser.FQN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dialectDeclaration() {
	    let localctx = new DialectDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, DroolsRuleParser.RULE_dialectDeclaration);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 65;
	        this.match(DroolsRuleParser.DIALECT);
	        this.state = 67; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 66;
	            this.match(DroolsRuleParser.WS);
	            this.state = 69; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DroolsRuleParser.WS);
	        this.state = 71;
	        this.match(DroolsRuleParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importDeclaration() {
	    let localctx = new ImportDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, DroolsRuleParser.RULE_importDeclaration);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 73;
	        this.match(DroolsRuleParser.IMPORT);
	        this.state = 75; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 74;
	            this.match(DroolsRuleParser.WS);
	            this.state = 77; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DroolsRuleParser.WS);
	        this.state = 79;
	        this.match(DroolsRuleParser.FQN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	globalDeclaration() {
	    let localctx = new GlobalDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, DroolsRuleParser.RULE_globalDeclaration);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 81;
	        this.match(DroolsRuleParser.GLOBAL);
	        this.state = 83; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 82;
	            this.match(DroolsRuleParser.WS);
	            this.state = 85; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DroolsRuleParser.WS);
	        this.state = 87;
	        this.match(DroolsRuleParser.FQN);
	        this.state = 89; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 88;
	            this.match(DroolsRuleParser.WS);
	            this.state = 91; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DroolsRuleParser.WS);
	        this.state = 93;
	        this.match(DroolsRuleParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typeDeclaration() {
	    let localctx = new TypeDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, DroolsRuleParser.RULE_typeDeclaration);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 95;
	        this.match(DroolsRuleParser.DECLARE);
	        this.state = 97; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 96;
	            this.match(DroolsRuleParser.WS);
	            this.state = 99; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DroolsRuleParser.WS);
	        this.state = 101;
	        this.match(DroolsRuleParser.ID);
	        this.state = 103; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 102;
	        		this.match(DroolsRuleParser.WS);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 105; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,12, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 109;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===DroolsRuleParser.EXTENDS) {
	            this.state = 107;
	            this.match(DroolsRuleParser.EXTENDS);
	            this.state = 108;
	            this.match(DroolsRuleParser.FQN);
	        }

	        this.state = 120;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,15,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 114;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===DroolsRuleParser.WS) {
	                    this.state = 111;
	                    this.match(DroolsRuleParser.WS);
	                    this.state = 116;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	                this.state = 117;
	                this.memberDeclaration(); 
	            }
	            this.state = 122;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,15,this._ctx);
	        }

	        this.state = 124; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 123;
	            this.match(DroolsRuleParser.WS);
	            this.state = 126; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DroolsRuleParser.WS);
	        this.state = 128;
	        this.match(DroolsRuleParser.END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	memberDeclaration() {
	    let localctx = new MemberDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, DroolsRuleParser.RULE_memberDeclaration);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130;
	        this.match(DroolsRuleParser.ID);
	        this.state = 134;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===DroolsRuleParser.WS) {
	            this.state = 131;
	            this.match(DroolsRuleParser.WS);
	            this.state = 136;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 137;
	        this.match(DroolsRuleParser.COLON);
	        this.state = 141;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===DroolsRuleParser.WS) {
	            this.state = 138;
	            this.match(DroolsRuleParser.WS);
	            this.state = 143;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 144;
	        _la = this._input.LA(1);
	        if(!(_la===DroolsRuleParser.PRIMITIVE || _la===DroolsRuleParser.FQN)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ruleDeclaration() {
	    let localctx = new RuleDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, DroolsRuleParser.RULE_ruleDeclaration);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        this.match(DroolsRuleParser.RULE);
	        this.state = 148; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 147;
	            this.match(DroolsRuleParser.WS);
	            this.state = 150; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DroolsRuleParser.WS);
	        this.state = 158;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===DroolsRuleParser.STRING) {
	            this.state = 152;
	            this.match(DroolsRuleParser.STRING);
	            this.state = 154; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 153;
	                this.match(DroolsRuleParser.WS);
	                this.state = 156; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===DroolsRuleParser.WS);
	        }

	        this.state = 160;
	        this.match(DroolsRuleParser.WHEN);
	        this.state = 162; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 161;
	            this.match(DroolsRuleParser.WS);
	            this.state = 164; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DroolsRuleParser.WS);
	        this.state = 166;
	        this.ruleLHS();
	        this.state = 167;
	        this.match(DroolsRuleParser.THEN);
	        this.state = 169; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 168;
	            this.match(DroolsRuleParser.WS);
	            this.state = 171; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===DroolsRuleParser.WS);
	        this.state = 173;
	        this.ruleRHS();
	        this.state = 174;
	        this.match(DroolsRuleParser.END);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ruleLHS() {
	    let localctx = new RuleLHSContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, DroolsRuleParser.RULE_ruleLHS);
	    try {
	        this.enterOuterAlt(localctx, 1);

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ruleRHS() {
	    let localctx = new RuleRHSContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, DroolsRuleParser.RULE_ruleRHS);
	    try {
	        this.enterOuterAlt(localctx, 1);

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

DroolsRuleParser.EOF = antlr4.Token.EOF;
DroolsRuleParser.DECLARE = 1;
DroolsRuleParser.DIALECT = 2;
DroolsRuleParser.END = 3;
DroolsRuleParser.EXTENDS = 4;
DroolsRuleParser.GLOBAL = 5;
DroolsRuleParser.IMPORT = 6;
DroolsRuleParser.PACKAGE = 7;
DroolsRuleParser.RULE = 8;
DroolsRuleParser.THEN = 9;
DroolsRuleParser.WHEN = 10;
DroolsRuleParser.SALIENCE = 11;
DroolsRuleParser.PRIMITIVE = 12;
DroolsRuleParser.KEYWORD = 13;
DroolsRuleParser.SEMICOLON = 14;
DroolsRuleParser.COLON = 15;
DroolsRuleParser.SEPARATOR = 16;
DroolsRuleParser.OPERATOR = 17;
DroolsRuleParser.ID = 18;
DroolsRuleParser.META = 19;
DroolsRuleParser.BINDING = 20;
DroolsRuleParser.FQN = 21;
DroolsRuleParser.INT = 22;
DroolsRuleParser.FLOAT = 23;
DroolsRuleParser.SINGLELINE_COMMENT = 24;
DroolsRuleParser.MULTILINE_COMMENT = 25;
DroolsRuleParser.WS = 26;
DroolsRuleParser.STRING = 27;
DroolsRuleParser.CHAR = 28;

DroolsRuleParser.RULE_program = 0;
DroolsRuleParser.RULE_declaration = 1;
DroolsRuleParser.RULE_packageDeclaration = 2;
DroolsRuleParser.RULE_dialectDeclaration = 3;
DroolsRuleParser.RULE_importDeclaration = 4;
DroolsRuleParser.RULE_globalDeclaration = 5;
DroolsRuleParser.RULE_typeDeclaration = 6;
DroolsRuleParser.RULE_memberDeclaration = 7;
DroolsRuleParser.RULE_ruleDeclaration = 8;
DroolsRuleParser.RULE_ruleLHS = 9;
DroolsRuleParser.RULE_ruleRHS = 10;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DroolsRuleParser.RULE_program;
    }

	declaration = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DeclarationContext);
	    } else {
	        return this.getTypedRuleContext(DeclarationContext,i);
	    }
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(DroolsRuleParser.WS);
	    } else {
	        return this.getToken(DroolsRuleParser.WS, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.enterProgram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.exitProgram(this);
		}
	}


}



class DeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DroolsRuleParser.RULE_declaration;
    }

	packageDeclaration() {
	    return this.getTypedRuleContext(PackageDeclarationContext,0);
	};

	importDeclaration() {
	    return this.getTypedRuleContext(ImportDeclarationContext,0);
	};

	globalDeclaration() {
	    return this.getTypedRuleContext(GlobalDeclarationContext,0);
	};

	dialectDeclaration() {
	    return this.getTypedRuleContext(DialectDeclarationContext,0);
	};

	typeDeclaration() {
	    return this.getTypedRuleContext(TypeDeclarationContext,0);
	};

	ruleDeclaration() {
	    return this.getTypedRuleContext(RuleDeclarationContext,0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(DroolsRuleParser.WS);
	    } else {
	        return this.getToken(DroolsRuleParser.WS, i);
	    }
	};


	SEMICOLON() {
	    return this.getToken(DroolsRuleParser.SEMICOLON, 0);
	};

	enterRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.enterDeclaration(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.exitDeclaration(this);
		}
	}


}



class PackageDeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DroolsRuleParser.RULE_packageDeclaration;
    }

	PACKAGE() {
	    return this.getToken(DroolsRuleParser.PACKAGE, 0);
	};

	FQN() {
	    return this.getToken(DroolsRuleParser.FQN, 0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(DroolsRuleParser.WS);
	    } else {
	        return this.getToken(DroolsRuleParser.WS, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.enterPackageDeclaration(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.exitPackageDeclaration(this);
		}
	}


}



class DialectDeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DroolsRuleParser.RULE_dialectDeclaration;
    }

	DIALECT() {
	    return this.getToken(DroolsRuleParser.DIALECT, 0);
	};

	STRING() {
	    return this.getToken(DroolsRuleParser.STRING, 0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(DroolsRuleParser.WS);
	    } else {
	        return this.getToken(DroolsRuleParser.WS, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.enterDialectDeclaration(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.exitDialectDeclaration(this);
		}
	}


}



class ImportDeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DroolsRuleParser.RULE_importDeclaration;
    }

	IMPORT() {
	    return this.getToken(DroolsRuleParser.IMPORT, 0);
	};

	FQN() {
	    return this.getToken(DroolsRuleParser.FQN, 0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(DroolsRuleParser.WS);
	    } else {
	        return this.getToken(DroolsRuleParser.WS, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.enterImportDeclaration(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.exitImportDeclaration(this);
		}
	}


}



class GlobalDeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DroolsRuleParser.RULE_globalDeclaration;
    }

	GLOBAL() {
	    return this.getToken(DroolsRuleParser.GLOBAL, 0);
	};

	FQN() {
	    return this.getToken(DroolsRuleParser.FQN, 0);
	};

	ID() {
	    return this.getToken(DroolsRuleParser.ID, 0);
	};

	WS = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(DroolsRuleParser.WS);
	    } else {
	        return this.getToken(DroolsRuleParser.WS, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.enterGlobalDeclaration(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof DroolsRuleListener ) {
	        listener.exitGlobalDeclaration(this);
		}
	}


}



class TypeDeclarationContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = DroolsRuleParser.RULE_typeDeclaration;
    }
